syntax = "proto3";

package micro.service.user;
option go_package = "./;user";

service User {
  rpc Login(UserLoginRequest) returns(UserLoginResponse){}
  rpc Register(UserRegisterRequest) returns(UserRegisterResponse) {}
  rpc Get(UserInfoRequest) returns(UserInfoResponse) {}
}

message UserLoginRequest {
  string user_name = 1;
  string password = 2;
}

message  UserLoginResponse {
  int64 user_id = 1;
}

message UserRegisterRequest {
  string user_name = 1;
  string password = 2;
}

message UserRegisterResponse {
  int64 user_id = 1;
}

message UserInfoRequest {
  string user_name = 1;
}

message UserInfoResponse {
  int64 id =1;
  string user_name = 2;
}

